<resources>
    <string name="app_name">MT-app</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="conectar">Conectar con un ESP</string>
    <string name="buscar_title">Buscar dispositivo</string>
    <string name="buscar_bluetooth">Buscar por Bluetooth</string>
    <string name="buscar_wifi">Buscar por Wi-Fi</string>
    
    <string name="dispositivo_ble">Dispositivo BLE</string>
    <string name="dispositivo_ble_info">Información del dispositivo BLE</string>
    <string name="dispositivo_ble_value">--</string>


    <string name="logo_description">Logo de la app</string>
    <string name="valor_minimo">Valor mínimo: </string>
    <string name="valor_maximo">Valor máximo: </string>
    <string name="volumen">Volumen</string>
    <string name="enviar">Enviar </string>
</resources>