<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <!-- Icono centrado encima del título -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/mt_logo_i"
        android:contentDescription="@string/logo_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Título principal -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectar"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:drawablePadding="8dp"
        android:layout_marginTop="12dp"
        app:drawableStartCompat="@drawable/ic_automation_24dp"
        app:drawableEndCompat="@drawable/ic_automation_24dp"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <!-- Contenedor con borde -->
    <LinearLayout
        android:id="@+id/bordered_container"
        android:background="@drawable/bg_bordered_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:drawablePadding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            app:drawableStartCompat="@drawable/ic_search_24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_bluetooth"
            android:backgroundTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/buscar_bluetooth"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            app:icon="@drawable/ic_bluetooth_24dp"
            app:iconTint="@android:color/black"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_wifi"
            android:backgroundTint="@android:color/white"
            android:text="@string/buscar_wifi"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:iconTint="@android:color/black"
            app:icon="@drawable/ic_wifi_24dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:cornerRadius="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
